--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
   <artifactId>demo</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <modules>
+    <module>demo-provider-payment8001</module>
+  </modules>
+
 
   <!--统一管理jar包版本-->
   <properties>
@@ -15,8 +19,8 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <junit.version>4.12</junit.version>
-    <lombok.version>1.2.17</lombok.version>
-    <log4j.version>1.16.18</log4j.version>
+    <lombok.version>1.16.18</lombok.version>
+    <log4j.version>1.2.17</log4j.version>
     <mysql.version>5.1.47</mysql.version>
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
