--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <packaging>pom</packaging>
   <modules>
     <module>demo-provider-payment8001</module>
+    <module>demo-consumer-order80</module>
   </modules>
 
 
