--- a/demo-provider-payment8001/pom.xml
+++ b/demo-provider-payment8001/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>demo-provider-payment8001</artifactId>
 
 <dependencies>
+    <!--引入自己定义的通用jar包-->
+    <dependency>
+        <groupId>com.lsey.springcloud</groupId>
+        <artifactId>demo-api-commons</artifactId>
+        <version>${project.version}</version>
+    </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
